feat: citation / icon design

--- a/jmtesting/ai-answers/local-copy/citation-work/for-review/divider-bubble-style-heading-disclaimer-2.html
+++ b/jmtesting/ai-answers/local-copy/citation-work/for-review/divider-bubble-style-heading-disclaimer-2.html
@@ -602,7 +602,12 @@ font-weight: bold !important;
                 <p class="ai-sentence">Some Canadians can renew their passport online, but only a limited number of online applications are accepted each day.</p>
                 <p class="ai-sentence">If you are eligible, you can start your online renewal by signing in to the passport online account.</p>
                 <p class="ai-sentence">If online renewal is not available, you can still renew by mail or in person.</p>
+ <div class="cc mistake-disc">
+      <p>
+                    AI can make mistakes. Always check your answer on the answer page.
+                    </p>
 
+                </div>		 
 <hr style="border: none; border-top: 4px solid #d9d9d9; margin:0px; width: 80px;">
 
                 <div class="citation-container">
@@ -614,22 +619,27 @@ font-weight: bold !important;
 </span>
                 </div> -->
 				<p class="citation-head"><img src="../../ai-stars-90.png" width="30" height="30" alt="">&nbsp;Continue with your answer here:</span></p>
-					                    <p class="citation-link" style="margin-top: 10px;">
+<style>
+.ai-message-content ul li p.citation-link a {
+  font-weight: normal !important;
+}
+
+.cc.mistake-disc p {
+	font-size: 16px !important;
+}
+</style>
+				<ul>
+					    <li>             <p class="citation-link" style="margin-top: 10px;">
                         <a href="https://www.canada.ca/en/immigration-refugees-citizenship/services/canadian-passports/renew-adult-passport/online-account.html" target="_blank" rel="noopener noreferrer" tabindex="0">
                             https://www.canada.ca/en/immigration-refugees-citizenship/services/canadian-passports/renew-adult-passport/online-account.html</a>
 						 <i class="fa fa-arrow-up-right-from-square" aria-hidden="true"></i>
-                    </p>
+                    </p></li>   
+				</ul>
                 </div>
 				</div>
-				 <div class="cc mistake-disc">
-                      <p>
-                    AI can make mistakes. Always check your answer on the answer page.
-                    </p>
-                </div>		 
+				
             </div>
-			<div style="background-color: pink">
 
-</div>
             <div class="chat-id"><p>Chat ID: 31e0fd81-2f48-4bbb-a290-57f8d3deba6f</p></div>
 						<div class="ai-message-content mrgn-tp-md">
 
