--- a/jmtesting/ai-answers/local-copy/citation-work/for-review/divider-bubble-style-heading-disclaimer-2.html
+++ b/jmtesting/ai-answers/local-copy/citation-work/for-review/divider-bubble-style-heading-disclaimer-2.html
@@ -602,13 +602,8 @@ font-weight: bold !important;
                 <p class="ai-sentence">Some Canadians can renew their passport online, but only a limited number of online applications are accepted each day.</p>
                 <p class="ai-sentence">If you are eligible, you can start your online renewal by signing in to the passport online account.</p>
                 <p class="ai-sentence">If online renewal is not available, you can still renew by mail or in person.</p>
- <div class="cc mistake-disc">
-      <p>
-                    AI can make mistakes. Always check your answer on the answer page.
-                    </p>
-
-                </div>		 
-<hr style="border: none; border-top: 4px solid #d9d9d9; margin:0px; width: 80px;">
+ 
+<hr style="border: none; border-top: 3px solid #d9d9d9; margin:0px; width: 80px;">
 
                 <div class="citation-container">
 								 
@@ -618,7 +613,7 @@ font-weight: bold !important;
     <i class="fa-solid fa-wand-magic-sparkles"></i>&nbsp;AI can make mistakes
 </span>
                 </div> -->
-				<p class="citation-head"><img src="../../ai-stars-90.png" width="30" height="30" alt="">&nbsp;Continue with your answer here:</span></p>
+				<p class="citation-head">Continue with your answer here:</span></p>
 <style>
 .ai-message-content ul li p.citation-link a {
   font-weight: normal !important;
@@ -637,7 +632,12 @@ font-weight: bold !important;
 				</ul>
                 </div>
 				</div>
-				
+				<div class="cc mistake-disc">
+      <p>
+                    AI can make mistakes, check the answer page or ask a follow-up question.
+                    </p>
+
+                </div>		 
             </div>
 
             <div class="chat-id"><p>Chat ID: 31e0fd81-2f48-4bbb-a290-57f8d3deba6f</p></div>
