--- a/jmtesting/ai-answers/local-copy/citation-work/for-review/divider-bubble-style-heading-disclaimer-2.html
+++ b/jmtesting/ai-answers/local-copy/citation-work/for-review/divider-bubble-style-heading-disclaimer-2.html
@@ -613,7 +613,7 @@ font-weight: bold !important;
     <i class="fa-solid fa-wand-magic-sparkles"></i>&nbsp;AI can make mistakes
 </span>
                 </div> -->
-				<p class="citation-head">Continue with your answer here:</span></p>
+				<p class="citation-head">Continue with this link:</span></p>
 <style>
 .ai-message-content ul li p.citation-link a {
   font-weight: normal !important;
@@ -634,7 +634,7 @@ font-weight: bold !important;
 				</div>
 				<div class="cc mistake-disc">
       <p>
-                    AI can make mistakes, check the answer page or ask a follow-up question.
+                    AI can make mistakes, check the answer or ask a follow-up question below.
                     </p>
 
                 </div>		 
