--- a/jmtesting/layered-theme-refinement/ly-features-3-outside.html
+++ b/jmtesting/layered-theme-refinement/ly-features-3-outside.html
@@ -156,6 +156,8 @@
 				<li><a href="#">Indigenous peoples</a></li>
 				<li><a href="#">Veterans and military</a></li>
 				<li><a href="theme-youth-en.html">Youth</a></li>
+				<li><a href="#">Manage life events</a></li>
+
 			</ul>
 		</div>
 	</nav>
@@ -288,7 +290,9 @@
 					<li><a href="https://www.canada.ca/en/services/science.html">Science and innovation</a></li>
 					<li><a href="https://www.canada.ca/en/services/indigenous-peoples.html">Indigenous Peoples</a></li>
 					<li><a href="https://www.canada.ca/en/services/veterans-military.html">Veterans and military</a></li>
-					<li><a href="https://www.canada.ca/en/services/youth.html">Youth</a></li></ul>
+					<li><a href="https://www.canada.ca/en/services/youth.html">Youth</a></li>
+					<li><a href="#">Manage life events</a></li>
+				</ul>
 			</nav>
 		</div>
 	</div>
