--- a/jmtesting/layered-theme-refinement/ly-ircc-v4.html
+++ b/jmtesting/layered-theme-refinement/ly-ircc-v4.html
@@ -178,6 +178,7 @@
 				<li><a href="#">Indigenous peoples</a></li>
 				<li><a href="#">Veterans and military</a></li>
 				<li><a href="#">Youth</a></li>
+				<li><a href="#">Manage life events</a></li>
 			</ul>
 		</div>
 	</nav>
@@ -403,7 +404,9 @@
 					<li><a href="https://www.canada.ca/en/services/science.html">Science and innovation</a></li>
 					<li><a href="https://www.canada.ca/en/services/indigenous-peoples.html">Indigenous Peoples</a></li>
 					<li><a href="https://www.canada.ca/en/services/veterans-military.html">Veterans and military</a></li>
-					<li><a href="https://www.canada.ca/en/services/youth.html">Youth</a></li></ul>
+					<li><a href="https://www.canada.ca/en/services/youth.html">Youth</a></li>
+					<li><a href="#">Manage life events</a></li>
+				</ul>
 			</nav>
 		</div>
 	</div>
