--- a/jmtesting/ai-answers/local-copy/citation-work/for-review/CDTS.html
+++ b/jmtesting/ai-answers/local-copy/citation-work/for-review/CDTS.html
@@ -36,6 +36,7 @@
 .aia-banner {
     background: #1a2838;
     bottom: 0;
+    padding: 1rem 1rem; /* added for CDTS*/
     color: #fff;
     left: 0;
     position: fixed;
